Ensure color emoji are visible in the UI parts.

--- a/extraterm/resources/themes/default/general-gui/variables.scss
+++ b/extraterm/resources/themes/default/general-gui/variables.scss
@@ -3,7 +3,7 @@
 //-------------------------------------------------------------------------
 // Basic fonts
 
-$font-family:  'BlinkMacSystemFont', 'Lucida Grande', 'Segoe UI', Ubuntu, Cantarell, sans-serif !default;
+$font-family: 'coloremoji', 'BlinkMacSystemFont', 'Lucida Grande', 'Segoe UI', Ubuntu, Cantarell, sans-serif !default;
 
 $font-size-base:    1rem !default;
 $font-size-small:   ($font-size-base * 0.9) !default;
